# nefthera

./: .gitignore  CHANGELOG.md  Menu.gd  README.md  Settings.gd  dune-project  game_over.gd  game_over.tscn  game_win.tscn  goblin.tscn  main.gd  main.tscn  menu.tscn  nefthera.cabal  nefthera.opam  project.godot  settings.tscn
assets/: Back ConsecutiveSlash.png.import  Back Dash.png.import  Back Movement.png.import  Cliff.png.import  Forest Cliff.png.import  Forest Props.png.import  Forest Structures.png.import  Forest Tilesett.png.import  ForestPack_Trees.png.import  Front ConsecutiveSlash.png.import  Front DashnRoll.png.import  Front Movement.png.import  GrassNDirt.png.import  Idle Working.png.import  RocksnStumps.png.import  Sample.png.import  Settlement.png.import  Side ConsecutiveSlash.png.import  Side Dash.png.import  Side Movement.png.import  Trees.png.import  Water Tileset.png.import  spr_Blue_slime_attack.png.import  spr_Blue_slime_attack_shadowless.png.import  spr_Blue_slime_death.png.import  spr_Blue_slime_hurt.png.import  spr_Blue_slime_hurt_shadowless.png.import  spr_Blue_slime_hurt_without_filter.png.import  spr_Blue_slime_idle.png.import  spr_Blue_slime_idle_shadowless.png.import  spr_Blue_slime_walk.png.import  spr_Blue_slime_walk_shadowless.png.import  spr_goblin_attack.png.import  spr_goblin_attack_shadowless.png.import  spr_goblin_death.png.import  spr_goblin_hurt.png.import  spr_goblin_hurt_shadowless.png.import  spr_goblin_hurt_withoutfilter.png.import  spr_goblin_idle.png.import  spr_goblin_idle_shadowless.png.import  (+40 more)
docs/: backlog.md
lib/: dune  (+2 more)
(+9 files in other folders)
