cabal-version:      3.0

name:               nefthera
synopsis:           A text-driven, RPG-inspired game
version:            0.1.0.0

-- description:
homepage:           https://github.com/jultty/nefthera
license:            BSD-3-Clause
license-file:       LICENSE
author:             Juno Takano <juno@jutty.dev>
maintainer:         juno@jutty.dev

-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- compilation:
common warnings
    ghc-options: -Wall

executable nefthera
    import:             warnings
    main-is:            Main.hs
    other-modules:      Lore.Intro
                        Status.Schema
    hs-source-dirs:     src
    default-language:   Haskell2010

-- dependencies:
    build-depends:      base == 4.17.2.1
                      , text == 2.1.2
                      , aeson == 2.2.2.0
